--- a/index.html
+++ b/index.html
@@ -2,12 +2,64 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name<!DOCTYPE html>
+  <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    <title>My exercise</title>
+  </head>
+  <body>
+  <input type="button" id="undo" value="Undo" onclick="undo()">
+  <input type="button" id="redo" value="Redo" onclick="redo()">
+  <span id="step"> 0</span> step logged<br>  
+  <input type="text" id="name"> Name<br>
+  <input type="number" id="from"> From <br>
+  <input type="number" id="to"> To <br>  
+  <input type="text" id="at"> At<br>
+  <input type="number" id="money"> Money<br>
+  <input type="button" id="add" value="Add" onclick="add()">
+  <input type="button" id="save" value="Save" onclick="save()"> <br>
+  
+  <select onchange = showSort(this.value)>
+    <option value="">--------- Sort by --------  </option>
+    <option value="sf">Sort by From Year</option>
+    <option value="st">Sort by To Year</option>
+    <option value="sfn">Sort by First Name (increase)</option>
+    <option value="sln">Sort by Last Name (increase)</option>
+    <option value="sfnd">Sort by First Name (decrease)</option>  
+    <option value="slnd">Sort by Last Name (decrease)</option>
+    <option value="si">Sort by Income</option>
+  </select>  
+  <input type="button" value = "Remove all" onclick="removeAll()"> <br>
+  <table>
+    <thead>
+      <tr>  
+        <th></th>
+        <th>Name</th>
+        <th>Từ năm</th>
+        <th>Đến năm</th>
+        <th>Học/Làm ở</th>
+        <th>Học phí/Lương (triệu/năm)</th>
+        <th>Delete</th>
+        <th>Insert</th> 
+      </tr>
+    </thead>
+    <tbody id='t'>
+    </tbody>
+  </table>
+  </body>
+  </html>="viewport" content="width=device-width">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
   <title>My exercise</title>
 </head>
 <body>
+<input type="button" id="undo" value="Undo" onclick="undo()">
+<input type="button" id="redo" value="Redo" onclick="redo()">
+<span id="step"> 0</span> step logged<br>  
 <input type="text" id="name"> Name<br>
 <input type="number" id="from"> From <br>
 <input type="number" id="to"> To <br>  
